[package]
name = "postkit"
version = "0.5.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Shared library for DCP Wizard, IMF Wizard, and DCP Doctor"

[dependencies]
asdcplib = { git = "https://github.com/PostPerfection/asdcplib-rs.git", tag = "v0.1.0" }
base64 = "0.22"
chrono = "0.4"
dirs = "6"
dolby_vision = { version = "3.3.2", features = ["xml"] }
grokj2k-sys = { git = "https://github.com/GrokImageCompression/grok.git", optional = true }
hex = "0.4"
notify = "8"
openjpeg-sys = { version = "1.0", optional = true }
quick-xml = "0.37"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
regex = "1"
ring = "0.17"
rsa = { version = "0.9", features = ["getrandom"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = { version = "0.10", features = ["oid"] }
thiserror = "2"
tiff = "0.9"
time = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "process", "io-util", "fs"], optional = true }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
x509-parser = { version = "0.16", features = ["verify"] }

[features]
default = []
async = ["dep:tokio"]
grok-ffi = ["dep:grokj2k-sys"]
openjpeg = ["dep:openjpeg-sys"]

[dev-dependencies]
tempfile = "3"
